# transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
src/transcriber/: __init__.py  cli.py  formatter.py  transcriber.py
